--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,6 +20,7 @@ steps:
       echo $DBT_USER_JSON > google-key.json
       dbt build
     secretEnv: ['DBT_USER_JSON']
+    allowFailure: true
 
   - name: 'gcr.io/cloud-builders/gsutil'
     args: ['-m', 'cp', '-r', 'target/*', 'gs://gk_dbt_artifacts/$BUILD_ID']
