--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -27,6 +27,14 @@ steps:
 
   - name: 'gcr.io/cloud-builders/gsutil'
     args: ['ls', '-r', 'gs://gk_dbt_artifacts/$BUILD_ID/**']
+    
+  - name: 'python'
+    entrypoint: 'python'
+    args: ['-m', 'pip', 'install', 'google-cloud-storage']
+
+  - name: 'python'
+    entrypoint: 'python'
+    args: ['list_artifacts.py']
 
 availableSecrets:
   secretManager:
