--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,6 +16,7 @@
 steps:
     # Install dependencies
   - name: 'ghcr.io/dbt-labs/dbt-bigquery:1.7.2'
+    id: DBT
     script: |
       echo $DBT_USER_JSON > google-key.json
       dbt build
@@ -23,10 +24,8 @@ steps:
     allowFailure: true
 
   - name: 'gcr.io/cloud-builders/gsutil'
+    id: SAVE_ARTIFACTS
     args: ['-m', 'cp', '-r', 'target/*', 'gs://gk_dbt_artifacts/$BUILD_ID']
-
-  - name: 'gcr.io/cloud-builders/gsutil'
-    args: ['ls', '-r', 'gs://gk_dbt_artifacts/$BUILD_ID/**']
 
   - name: 'python'
     id: LIST_ARTIFACTS
