--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,12 +14,20 @@
 # [START cloudbuild_python_yaml]
 # [START cloudbuild_python_dependencies_yaml]
 steps:
-    # Install dependencies
+
+  - name: 'python'
+    id: PRE_RUN_TASKS
+    script: |
+      echo 'PRE_RUN_TASKS'
+    env:
+    - 'BUILD_ID=$BUILD_ID'
+
   - name: 'ghcr.io/dbt-labs/dbt-bigquery:1.7.2'
     id: DBT
     script: |
       echo $DBT_USER_JSON > google-key.json
       dbt build
+      echo 'HELLO_WORLD'
     secretEnv: ['DBT_USER_JSON']
     allowFailure: true
 
@@ -28,9 +36,9 @@ steps:
     args: ['-m', 'cp', '-r', 'target/*', 'gs://gk_dbt_artifacts/$BUILD_ID']
 
   - name: 'python'
-    id: LIST_ARTIFACTS
+    id: POST_RUN_TASKS
     script: |
-      pip install google-cloud-storage
+      pip install requirements.txt
       python list_artifacts.py
     env:
     - 'BUILD_ID=$BUILD_ID'
