--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,32 +16,19 @@
 steps:
 
   - name: 'python'
-    id: PRE_RUN_TASKS
     script: |
-      echo 'PRE_RUN_TASKS'
+      pip install requirements.txt
+      python pre_run_tasks.py
+      dbt build
+      python post_run_tasks.py
+    secretEnv: ['DBT_USER_JSON']
     env:
     - 'BUILD_ID=$BUILD_ID'
-
-  - name: 'ghcr.io/dbt-labs/dbt-bigquery:1.7.2'
-    id: DBT
-    script: |
-      echo $DBT_USER_JSON > google-key.json
-      dbt build
-      echo 'HELLO_WORLD'
-    secretEnv: ['DBT_USER_JSON']
     allowFailure: true
 
   - name: 'gcr.io/cloud-builders/gsutil'
     id: SAVE_ARTIFACTS
     args: ['-m', 'cp', '-r', 'target/*', 'gs://gk_dbt_artifacts/$BUILD_ID']
-
-  - name: 'python'
-    id: POST_RUN_TASKS
-    script: |
-      pip install requirements.txt
-      python list_artifacts.py
-    env:
-    - 'BUILD_ID=$BUILD_ID'
 
 availableSecrets:
   secretManager:
