--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,6 +18,7 @@ steps:
   - name: 'python'
     script: |
       pip install -r requirements.txt
+      pip freeze
       python pre_run_tasks.py
       dbt build
       python post_run_tasks.py
