--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,7 +14,13 @@
 # [START cloudbuild_python_yaml]
 # [START cloudbuild_python_dependencies_yaml]
 steps:
-
+  - name: 'ghcr.io/dbt-labs/dbt-bigquery:1.7.2'
+    id: DBT
+    script: |
+      echo $DBT_USER_JSON > google-key.json
+      dbt build
+    secretEnv: ['DBT_USER_JSON']
+    allowFailure: true
   - name: 'ghcr.io/dbt-labs/dbt-bigquery:1.7.2'
     script: |
       python pre_run_tasks.py
