--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,19 +14,23 @@
 # [START cloudbuild_python_yaml]
 # [START cloudbuild_python_dependencies_yaml]
 steps:
+  - name: 'python'
+    id: PRE
+    script: |
+      python pre_run_tasks.py
+    secretEnv: ['DBT_USER_JSON']
+    allowFailure: true
+
   - name: 'ghcr.io/dbt-labs/dbt-bigquery:1.7.2'
     id: DBT
     script: |
-      echo $DBT_USER_JSON > google-key.json
       dbt build
-    secretEnv: ['DBT_USER_JSON']
     allowFailure: true
-  - name: 'ghcr.io/dbt-labs/dbt-bigquery:1.7.2'
+
+  - name: 'python'
+    id: POST
     script: |
-      python pre_run_tasks.py
-      dbt build
       python post_run_tasks.py
-    secretEnv: ['DBT_USER_JSON']
     env:
     - 'BUILD_ID=$BUILD_ID'
     allowFailure: true
