--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,6 +17,7 @@ steps:
   - name: 'python'
     id: PRE
     script: |
+      pip install -r requirements.txt
       python pre_run_tasks.py
     secretEnv: ['DBT_USER_JSON']
     allowFailure: true
