--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,15 +17,16 @@ steps:
   - name: 'python'
     id: PRE
     script: |
-      python pre_run_tasks.py
+      echo 'hello'
     secretEnv: ['DBT_USER_JSON']
     allowFailure: true
 
   - name: 'ghcr.io/dbt-labs/dbt-bigquery:1.7.2'
     id: DBT
     script: |
-      echo "testing"
-      dbt debug
+      echo $DBT_USER_JSON > google-key.json
+      dbt build
+    secretEnv: ['DBT_USER_JSON']
     allowFailure: true
 
   - name: 'python'
