--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,16 +17,21 @@ steps:
   - name: 'python'
     id: PRE
     script: |
-      echo 'hello'
+      echo $DBT_USER_JSON > google-key.json
+      python pre_run_tasks.py
     secretEnv: ['DBT_USER_JSON']
     allowFailure: true
 
   - name: 'ghcr.io/dbt-labs/dbt-bigquery:1.7.2'
-    id: DBT
+    id: DBT_RUN
     script: |
-      echo $DBT_USER_JSON > google-key.json
-      dbt build
-    secretEnv: ['DBT_USER_JSON']
+      dbt run
+    allowFailure: true
+
+  - name: 'ghcr.io/dbt-labs/dbt-bigquery:1.7.2'
+    id: DBT_TEST
+    script: |
+      dbt test
     allowFailure: true
 
   - name: 'python'
