--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,6 +17,7 @@ steps:
   - name: 'python'
     id: PRE
     script: |
+      echo $(date +%s) > start_time.txt
       echo $DBT_USER_JSON > google-key.json
       python pre_run_tasks.py
     secretEnv: ['DBT_USER_JSON']
@@ -25,6 +26,7 @@ steps:
   - name: 'ghcr.io/dbt-labs/dbt-bigquery:1.7.2'
     id: DBT_RUN
     script: |
+      sh get_elapsed_seconds.sh
       dbt run
     allowFailure: true
 
