--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,7 +17,7 @@ steps:
 
   - name: 'gcr.io/cloud-builders/gsutil'
     id: PULL_ARTIFACTS
-    args: ['-m', 'cp', '-r', 'gs://gk_dbt_artifacts/master', '.']
+    args: ['-m', 'cp', '-r', 'gs://gk_dbt_artifacts/master', './target']
 
   - name: 'python'
     id: PRE
