--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,10 +15,6 @@
 # [START cloudbuild_python_dependencies_yaml]
 steps:
 
-  - name: 'gcr.io/cloud-builders/gsutil'
-    id: PULL_ARTIFACTS
-    args: ['-m', 'cp', '-r', 'gs://gk_dbt_artifacts/master', './target']
-
   - name: 'python'
     id: PRE
     script: |
@@ -26,8 +22,13 @@ steps:
       echo $(date +%s) > start_time.txt
       echo $DBT_USER_JSON > google-key.json
       python pre_run_tasks.py
+      mkdir target
     secretEnv: ['DBT_USER_JSON']
     allowFailure: true
+
+  - name: 'gcr.io/cloud-builders/gsutil'
+    id: PULL_ARTIFACTS
+    args: ['-m', 'cp', '-r', 'gs://gk_dbt_artifacts/master', './target']
 
   - name: 'ghcr.io/dbt-labs/dbt-bigquery:1.7.2'
     id: DBT_RUN
