--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,7 +15,8 @@
 # [START cloudbuild_python_dependencies_yaml]
 steps:
 
-  - name: 'python'
+  - %anchor_test
+    name: 'python'
     id: PRE
     script: |
       ls
@@ -25,8 +26,8 @@ steps:
       mkdir target
     secretEnv: ['DBT_USER_JSON']
 
-  - name: 'gcr.io/cloud-builders/gsutil'
-    id: PULL_STATE_ARTIFACTS
+  - <<: *anchor_test
+    name: 'gcr.io/cloud-builders/gsutil'
     args: ['-m', 'cp', '-r', 'gs://gk_dbt_state/target/*', './target/']
     
   - name: 'ghcr.io/dbt-labs/dbt-bigquery:1.7.2'
