--- a/jaffle_shop/models/warehouse/_models.yml
+++ b/jaffle_shop/models/warehouse/_models.yml
@@ -1,8 +1,14 @@
 version: 2
 
 models:
-  - name: customers
-    description: This table has basic information about a customer, as well as some derived facts based on a customer's orders
+  - name: wh_customers
+    access: public
+    config:
+      group: industry_operations
+    meta:
+      owner: luke.ralphs-davies@octoenergy.com
+    description: |
+      This table has basic information about a customer, as well as some derived facts based on a customer's orders
 
     columns:
       - name: customer_id
@@ -12,10 +18,10 @@ models:
           - not_null
 
       - name: first_name
-        description: Customer's first name. PII.
+        description: Customer's first name (hashed).
 
       - name: last_name
-        description: Customer's last name. PII.
+        description: Customer's last name (hashed).
 
       - name: first_order
         description: Date (UTC) of a customer's first order
@@ -29,8 +35,14 @@ models:
       - name: total_order_amount
         description: Total value (AUD) of a customer's orders
 
-  - name: orders
-    description: This table has basic information about orders, as well as some derived facts based on payments
+  - name: wh_orders
+    access: public
+    config:
+      group: industry_operations
+    meta:
+      owner: luke.ralphs-davies@octoenergy.com
+    description: |
+      This table has basic information about orders, as well as some derived facts based on payments.
 
     columns:
       - name: order_id
@@ -44,7 +56,7 @@ models:
         tests:
           - not_null
           - relationships:
-              to: ref('customers')
+              to: ref('wh_customers')
               field: customer_id
 
       - name: order_date
