--- a/models/staging/jaffle_shop/_jaffle_shop__models.yml
+++ b/models/staging/jaffle_shop/_jaffle_shop__models.yml
@@ -1,14 +1,14 @@
 version: 2
 
 models:
-  - name: stg_customers
+  - name: stg_jaffle_shop__customers
     columns:
       - name: customer_id
         tests:
           - unique
           - not_null
 
-  - name: stg_orders
+  - name: stg_jaffle_shop__orders
     columns:
       - name: order_id
         tests:
@@ -18,14 +18,3 @@ models:
         tests:
           - accepted_values:
               values: ['placed', 'shipped', 'completed', 'return_pending', 'returned']
-
-  - name: stg_payments
-    columns:
-      - name: payment_id
-        tests:
-          - unique
-          - not_null
-      - name: payment_method
-        tests:
-          - accepted_values:
-              values: ['credit_card', 'coupon', 'bank_transfer', 'gift_card']
