Changes to files

--- a/jaffle_shop/models/finance/_exposures.yml
+++ b/jaffle_shop/models/finance/_exposures.yml
@@ -10,6 +10,6 @@ exposures:
     type: dashboard
     url: https://inksacio.eks.octopus.engineering/my_certification_dashboard/
     owner: 
-      email: 'example@octoenergy.com'
+      email: 'example.person@octoenergy.com'
     depends_on:
       - ref('fnl_finance_order_returns')
