--- a/jaffle_shop/models/finance/_models.yml
+++ b/jaffle_shop/models/finance/_models.yml
@@ -5,7 +5,7 @@ models:
     config:
       tags: [access:public]
     meta:
-      owner: 'example@octoenergy.com'
+      owner: 'example.person@octoenergy.com'
       team_owner: 'example_owner@octoenergy.com'
     description: Table containing the value of all returned orders, per customer.
     columns:
