--- a/jaffle_shop/models/warehouse/_models.yml
+++ b/jaffle_shop/models/warehouse/_models.yml
@@ -1,81 +1,78 @@
 version: 2
 
-models:
-  - name: customers
-    description: This table has basic information about a customer, as well as some derived facts based on a customer's orders
-
+models: 
+  - name: wh_customers
+    access: public 
+    config:
+      group: example_group
+    meta:
+      owner: 'example.person@octoenergy.com'
+      team_owner: 'example_team@octoenergy.com'
+    description: This table has basic information about a customer, as well as some derived facts based on a customer's orders.
+      information.
     columns:
       - name: customer_id
         description: This is a unique identifier for a customer
         tests:
           - unique
           - not_null
-
-      - name: first_name
-        description: Customer's first name. PII.
-
+      - name: first_name 
+        description: Hashed version of the customer's first name 
       - name: last_name
-        description: Customer's last name. PII.
-
+        description: Hashed version of the customer's last name
       - name: first_order
         description: Date (UTC) of a customer's first order
-
       - name: most_recent_order
         description: Date (UTC) of a customer's most recent order
-
       - name: number_of_orders
         description: Count of the number of orders a customer has placed
-
-      - name: total_order_amount
+      - name: customer_lifetime_value
         description: Total value (AUD) of a customer's orders
 
-  - name: orders
-    description: This table has basic information about orders, as well as some derived facts based on payments
-
+  - name: wh_orders
+    access: public 
+    config:
+      group: example_group
+    meta:
+      owner: 'example.person@octoenergy.com'
+      team_owner: 'example_team@octoenergy.com'
+    description: This table has basic information about orders, as well as some derived facts based on payments.
     columns:
       - name: order_id
+        description:This is a unique identifier for an order
         tests:
           - unique
           - not_null
-        description: This is a unique identifier for an order
-
-      - name: customer_id
-        description: Foreign key to the customers table
+      - name: customer_id 
+        description: Foreign key to customers table- unique customer number
         tests:
-          - not_null
+          - not_null 
           - relationships:
-              to: ref('customers')
+              to: ref('wh_customers')
               field: customer_id
-
       - name: order_date
         description: Date (UTC) that the order was placed
-
       - name: status
-        description: '{{ doc("orders_status") }}'
+        description: {{ docs("orders_status") }}
         tests:
           - accepted_values:
               values: ['placed', 'shipped', 'completed', 'return_pending', 'returned']
-
       - name: amount
         description: Total amount (AUD) of the order
         tests:
           - not_null
-
       - name: credit_card_amount
         description: Amount of the order (AUD) paid for by credit card
         tests:
           - not_null
-
-      - name: coupon_amount
+      - name: coupon_amount 
         description: Amount of the order (AUD) paid for by coupon
         tests:
           - not_null
-
       - name: bank_transfer_amount
         description: Amount of the order (AUD) paid for by bank transfer
         tests:
           - not_null
-
       - name: gift_card_amount
         description: Amount of the order (AUD) paid for by gift card
         tests:
