--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -21,6 +21,12 @@ require-dbt-version: [">=1.0.0", "<2.0.0"]
 
 models:
   jaffle_shop:
-      materialized: table
+      +materialized: table
       staging:
-        materialized: view
+        +materialized: view
+      marts:
+      +materialized: table
+        core:
+        +schema: core
+        intermediate:
+          +schema: core_intermediate
