--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -13,20 +13,25 @@ macro-paths: ["macros"]
 
 target-path: "target"
 clean-targets:
-    - "target"
-    - "dbt_modules"
-    - "logs"
+  - "target"
+  - "dbt_modules"
+  - "logs"
 
 require-dbt-version: [">=1.0.0", "<2.0.0"]
 
 models:
   jaffle_shop:
+    # Default materialization for the project
+    +materialized: table
+
+    staging:
+      +materialized: view  # All models in the staging folder will be views by default
+
+    marts:
+      # Default materialization for marts folder
       +materialized: table
-      staging:
-        +materialized: view
-      marts:
-      +materialized: table
-        core:
-        +schema: core
+
+      core:
+        +schema: core  # Models in the marts/core folder will use the "core" schema
         intermediate:
-          +schema: core_intermediate
+          +schema: core_intermediate  # Models in marts/core/intermediate use "core_intermediate"
