--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -21,9 +21,16 @@ require-dbt-version: [">=1.0.0", "<2.0.0"]
 dispatch:
   - macro_namespace: dbt_utils
     search_order: ['dbt_project_evaluator', 'spark_utils', 'dbt_utils']
+  - macro_namespace: dbt
+    search_order: ['dbt_project_evaluator', 'dbt']
 
 models:
   jaffle_shop:
       materialized: table
       staging:
         materialized: view
+
+seeds:
+  dbt_project_evaluator:
+    dbt_project_evaluator_exceptions:
+      +enabled: false
